more refactors first screen background logic almost done

--- a/PlannerAssignment/PlannerAssignment.csproj
+++ b/PlannerAssignment/PlannerAssignment.csproj
@@ -83,6 +83,9 @@
 	  <MauiXaml Update="Mvvm\Views\ResultPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Mvvm\Views\StationPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
