lot of changes database and favorites kinda worky

--- a/PlannerAssignment/PlannerAssignment.csproj
+++ b/PlannerAssignment/PlannerAssignment.csproj
@@ -113,4 +113,6 @@
 	  </MauiXaml>
 	</ItemGroup>
 
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionPlannerAssignmentHideInfoBar="True" /></VisualStudio></ProjectExtensions>
+
 </Project>
